webapp/src/main/webapp/css/business.css
.view-appointments-btn {
    font-family: 'Poppins', sans-serif;
    background-color: #6c6fff;
    width: 120px;
    font-size: medium;
    border-radius: 8px;
    border-color: transparent;
}
.business-header {
    width:100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.service-box {
    height: 180px;
    border-radius: 15px;
    padding: 10px;
    width: 190px;
    margin: 25px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-weight: 400;
}

.service-img {
    height: 180px;
    width: 190px;
    border-radius: 15px;
}

.box {
    box-shadow: 0 0 15px rgba(92, 99, 105, 0.15);
}
.boxes-container {
    display: flex;
    margin-inline: -20px;
    flex-wrap: wrap;
}

.box-text {
    text-align: center;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    width: 190px;
}

.appointment-box {
    background-color: white;
    /*width: 100%;*/
    height: 35px;
    display: flex;
    justify-content: flex-start;
    margin-top: 20px;
    align-items: center;
    padding: 10px;
    border-radius: 15px;
}

.page {
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto
}

.appointments-container, .appointment-container{
    display: flex;
    flex-direction: column;
    width: 100%;
}

.appointments-container{
    padding-bottom: 100px;
}

.appointment-field {
    padding-left: 30px;
    text-align: left;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.day{
    width: 150px;
}

.service-name {
    text-decoration: none;
    color: #6c6fff;
    width: 160px;
}


.time {
    width: 165px;
    display: flex;
    color: #969696;

}
.id{
    width: 40px;
    color: #969696;
}

i {
    width: 10px;
    height: 10px;
    padding-right: 5px;
}

body {
    text-overflow: ellipsis;
}

.decision-container{
    display: flex;
    flex-direction: row;
}
.decision-btn{

    /*all: unset;height: 110%;
    width: 110%;*/
    border: none;
    background-color: transparent;
    cursor: pointer;
    width: 60px;
    height: 50px;
    margin-inline: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.accept-btn :hover{
    color: #38DE35;
    background-color: #38DE35;
}

.deny-btn :hover{
    background-color: #E24646;
    color: #E24646;
}
.accordion-btn{
    cursor: pointer;
    width: 30px;
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
    background-color: transparent;
}

.accept-icon {
    color: #38DE35;
}

.deny-icon {
    color: #E24646;
    rotate: 45deg;
}

.cancel-icon {
    color: #E24646;
}

.correct-btn {
    margin-top: -10px;
}

.accordion-container {
    background-color: #DADCE0;
    color: #3d3d3d;
    max-height: 70px;
    display: none;
    padding-top: 40px;
    margin-top: -20px;
    padding-bottom: 10px;
    border-radius: 0 0 16px 16px;
    position: relative;
    z-index: -1;
}

.accordion-btn {
    display: flex;
    justify-items: center;
    padding-right: 25px;
}

.accordion-btn.active {
    rotate: 180deg;
}

.appointment-container.active .accordion-container{
    display: flex;
}

.accordion-field {
    display: flex;
    justify-content: center;
    padding-bottom: 10px;
}

.contact-container{
    display: flex;
    flex-direction: column;
    align-items: start;
    width: 450px;
}

